Fixed Nav not showing on Mobile view

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -5,6 +5,10 @@
     #hamburger-nav{
         display: flex;
     }
+    .hamburger-menu {
+        position:relative;
+        display: inline-block;
+      }
     *{
         font-family: 'montserrat';
     }
@@ -43,6 +47,10 @@
     #hamburger-nav{
         display: flex;
     }
+    .hamburger-menu {
+        position:relative;
+        display: inline-block;
+      }
     *{
         font-family: 'montserrat';
     }
